--- a/sample-app-capitals/AndroidManifest.xml
+++ b/sample-app-capitals/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Copyright (c) 2013, MapsWithMe GmbH All rights reserved.
+  Copyright (c) 2022, Organic Maps OÜ. All rights reserved.
 
   Redistribution and use in source and binary forms, with or without modification,
   are permitted provided that the following conditions are met:
