--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-bin/
-gen/
-build/
-.settings/
-
+*.iml
+.gradle
+/local.properties
+/.idea
 .DS_Store
-.classpath
-.cproject
-.project
+/build
+/captures
+.externalNativeBuild
+.cxx
 local.properties
-lint.xml
