--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,19 +1,32 @@
-apply plugin: 'android-library'
+plugins {
+  id 'com.android.library'
+}
 
 android {
-
-  // Define these properties in the gradle.properties file in the root project folder
-  compileSdkVersion propTargetSdkVersion.toInteger()
-  buildToolsVersion propBuildToolsVersion
+  compileSdk 32
 
   defaultConfig {
-    minSdkVersion propMinSdkVersion.toInteger()
-    targetSdkVersion propTargetSdkVersion.toInteger()
+    minSdk 21
+    targetSdk 32
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    consumerProguardFiles "consumer-rules.pro"
   }
 
-  sourceSets.main {
-    manifest.srcFile 'AndroidManifest.xml'
-    java.srcDirs = ['src']
-    res.srcDirs = ['res']
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+}
+
+dependencies {
+
+  implementation 'androidx.appcompat:appcompat:1.4.2'
+  implementation 'com.google.android.material:material:1.6.1'
 }
