--- a/sample-app-capitals/build.gradle
+++ b/sample-app-capitals/build.gradle
@@ -1,19 +1,35 @@
-apply plugin: 'android'
+plugins {
+  id 'com.android.application'
+}
 
 android {
-
-  // Define these properties in the gradle.properties file in the root project folder
-  compileSdkVersion propTargetSdkVersion.toInteger()
-  buildToolsVersion propBuildToolsVersion
+  compileSdk 32
 
   defaultConfig {
-    minSdkVersion propMinSdkVersion.toInteger()
-    targetSdkVersion propTargetSdkVersion.toInteger()
+    applicationId "app.organicmaps.api.sample.capitals"
+    minSdk 21
+    targetSdk 32
+    versionCode 1
+    versionName "1.0"
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
 
-  sourceSets.main {
-    manifest.srcFile 'AndroidManifest.xml'
-    java.srcDirs = ['src']
-    res.srcDirs = ['res']
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+}
+
+dependencies {
+
+  implementation 'androidx.appcompat:appcompat:1.4.2'
+  implementation 'com.google.android.material:material:1.6.1'
+  implementation project(path: ':lib')
 }
