--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "Organic Maps API"
 include ':sample-app-capitals'
 include ':lib'
+include ':sample-pick-point'
