--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-  compileSdk 32
+  compileSdk project.targetSdkVersion
 
   defaultConfig {
-    minSdk 21
-    targetSdk 32
+    minSdk project.minSdkVersion
+    targetSdk project.targetSdkVersion
+    buildToolsVersion project.buildToolsVersion
 
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     consumerProguardFiles "consumer-rules.pro"
   }
 
@@ -20,8 +20,8 @@ android {
     }
   }
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility project.javaVersion
+    targetCompatibility project.javaVersion
   }
 }
 
