--- a/sample-pick-point/build.gradle
+++ b/sample-pick-point/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-  compileSdk 32
+  compileSdk project.targetSdkVersion
 
   defaultConfig {
     applicationId "app.organicmaps.api.sample.pick_point"
-    minSdk 21
-    targetSdk 32
+    minSdk project.minSdkVersion
+    targetSdk project.targetSdkVersion
+    buildToolsVersion project.buildToolsVersion
     versionCode 1
     versionName "1.0"
   }
@@ -20,8 +21,8 @@ android {
     }
   }
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility project.javaVersion
+    targetCompatibility project.javaVersion
   }
 }
 
