--- a/sample-app-capitals/src/main/AndroidManifest.xml
+++ b/sample-app-capitals/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
   OF SUCH DAMAGE.
 -->
 
-<manifest package="app.organicmaps.api.sample.capitals"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <application
       android:allowBackup="true"
