--- a/sample-app-capitals/build.gradle
+++ b/sample-app-capitals/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+  namespace 'app.organicmaps.api.sample.capitals'
   compileSdk project.targetSdkVersion
 
   defaultConfig {
@@ -26,8 +27,12 @@ android {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
+}
+
 dependencies {
-  implementation 'androidx.appcompat:appcompat:1.4.2'
-  implementation 'com.google.android.material:material:1.6.1'
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'com.google.android.material:material:1.8.0'
   implementation project(path: ':lib')
 }
